Fix reference toolbar issue on firefox
Closes #46

--- a/frontend/freebase2wikidata.css
+++ b/frontend/freebase2wikidata.css
@@ -22,6 +22,10 @@
   background-color: #A7D7F9 !important;
 }
 
+.new-source .wikibase-toolbar-container {
+  width: 21em !important;
+}
+
 .mw-notification-tag-ps-error {
   background-color: #ffecec !important;
   border: 1px solid #f5aca6 !important;
